--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "litter-g.js",
   "dependencies": {
-    "hyperhtml": "^2.13.0",
-    "lit-html": "^0.11.0",
-    "xtal-latx": "0.0.24"
+    "xtal-latx": "0.0.26"
+  },
+  "devDependencies": {
+    "@webcomponents/webcomponentsjs": "^2.0.0",
+    "jiife": "0.0.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
