--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
   },
   "devDependencies": {
     "@webcomponents/webcomponentsjs": "^2.0.0",
-    "jiife": "0.0.5"
+    "jiife": "0.0.5",
+    "tape": "^4.9.1",
+    "@types/tape": "4.2.32",
+    "xtal-test": "0.0.8"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node createIIFE.js && tape test/*.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bahrus/litter-g.git"
   },
-  "author": "",
+  "author": "bahrus <anderson.bruce.b@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/bahrus/litter-g/issues"
