--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
-		"target": "ES6",
-		"module":"ES6",
+		"target": "es2017",
+		"module":"es2015",
 		"sourceMap": true,
 		"experimentalDecorators": true,
 		"newLine": "LF",
