--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "litter-g",
   "version": "0.0.13",
-  "description": "",
+  "description": "Use lit-html inside an html element",
   "main": "litter-g.js",
   "dependencies": {
-    "xtal-latx": "0.0.27"
+    "xtal-latx": "0.0.29"
   },
   "devDependencies": {
     "@webcomponents/webcomponentsjs": "^2.0.0",
