--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "xtal-test": "0.0.8"
   },
   "scripts": {
-    "test": "node createIIFE.js && tape test/*.js"
+    "test": "node createIIFE.js && tape test/litter-g-test1.js && tape test/litter-gz-test1.js"
   },
   "repository": {
     "type": "git",
