--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "Use lit-html inside an html element",
   "main": "litter-g.js",
   "dependencies": {
-    "xtal-latx": "0.0.83"
+    "xtal-element": "0.0.29"
   },
   "devDependencies": {
-    "@webcomponents/webcomponentsjs": "^2.0.0",
-    "jiife": "0.0.9",
-    "tape": "^4.9.1",
-    "@types/tape": "4.2.32",
-    "xtal-test": "0.0.8"
+    "@webcomponents/webcomponentsjs": "2.2.7",
+    "jiife": "0.0.12",
+    "tape": "4.10.1",
+    "@types/tape": "4.2.33",
+    "xtal-test": "0.0.10"
   },
   "scripts": {
     "test": "node createIIFE.js && tape test/litter-g-test1.js && tape test/litter-gz-test1.js"
