--- a/package.json
+++ b/package.json
@@ -5,18 +5,17 @@
   "main": "litter-g.js",
   "module": "litter-g.js",
   "dependencies": {
-    "xtal-element": "0.0.59",
-    "trans-render": "0.0.112"
+    "xtal-element": "0.0.101",
+    "trans-render": "0.0.142",
+    "lit-html": "1.1.2"
   },
   "devDependencies": {
-    "@webcomponents/webcomponentsjs": "2.2.10",
-    "jiife": "0.0.12",
-    "tape": "4.10.2",
-    "@types/tape": "4.2.33",
-    "xtal-test": "0.0.19"
+    "xtal-test": "0.0.41",
+    "es-module-shims": "0.4.6"
   },
   "scripts": {
-    "test": "node createIIFE.js && tape test/litter-g-test1.js && tape test/litter-gz-test1.js"
+    "test": "node createIIFE.js && tape test/litter-g-test1.js && tape test/litter-gz-test1.js",
+    "serve": "node node_modules/xtal-test/serve.js"
   },
   "repository": {
     "type": "git",
